--- a/styles/header.css
+++ b/styles/header.css
@@ -78,6 +78,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-shrink: 0;
     align-items: center;
     margin-inline: 24px;
 }
