--- a/styles/video.css
+++ b/styles/video.css
@@ -1,9 +1,12 @@
 .video-list-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 8px;
-    row-gap: 16px;
+    column-gap: 17px;
+    row-gap: 19px;
+    margin-left: 72px;
+    margin-top: 0;
     padding: 20px;
+    background-color: rgb(250, 250, 250);
 }
 
 .card {
@@ -17,7 +20,7 @@
 
 .info-grid {
     display: grid;
-    grid-template-columns: 40px 1fr;
+    grid-template-columns: 38px 1fr;
     gap: 10px;
 }
 
@@ -30,6 +33,7 @@
 .vid-title {
     font-weight: 500;
     line-height: 22px;
+    font-size: 14px;
 }
 
 .author,
