--- a/styles/header.css
+++ b/styles/header.css
@@ -4,13 +4,14 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 56px;
+    height: 57px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid rgb(201, 201, 201);
     background-color: white;
+    
+    z-index: 100;
 }
 
 .left-flex {
@@ -86,34 +87,4 @@
     justify-content: space-between;
     align-items: center;
     margin-inline: 24px;
-}
-
-.side-nav-bar{
-    position: fixed;
-    top: 56px;
-    left: 0;
-    bottom: 0;
-    padding-top: 7px;
-    padding-left: 2px;
-    background-color: white;
-}
-
-.icon{
-    height: 74px;
-    
-    display: flex;
-    flex-direction: column;
-    
-    justify-content: center;
-    align-items: center;
-    
-    font-size: 10px;
-    font-weight: 400px;
-    line-height: 25px;
-
-    
-}
-
-.icon-img{
-    width: 24px;
 }
