--- a/styles/video.css
+++ b/styles/video.css
@@ -6,6 +6,7 @@
     margin-left: 72px;
     margin-top: 0;
     padding: 20px;
+    border-top: 1px solid rgb(201, 201, 201);
     background-color: rgb(250, 250, 250);
 }
 
@@ -14,13 +15,29 @@
     padding: 5px;
 }
 
+.thumbnail {
+    position: relative;
+}
+
 .vid-thumbnail {
     width: 100%;
 }
 
+.time-stamp {
+    position: absolute;
+    bottom: 12px;
+    right: 4px;
+
+    background-color: black;
+    color: white;
+    font-size: 12px;
+    font-weight: 500;
+    padding: 4px;
+}
+
 .info-grid {
     display: grid;
-    grid-template-columns: 38px 1fr;
+    grid-template-columns: 40px 1fr;
     gap: 10px;
 }
 
