--- a/styles/video.css
+++ b/styles/video.css
@@ -1,6 +1,6 @@
 .video-list-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
     column-gap: 17px;
     row-gap: 19px;
     margin-left: 72px;
@@ -27,7 +27,7 @@
     position: absolute;
     bottom: 12px;
     right: 4px;
-
+    border-radius: 2px;
     background-color: black;
     color: white;
     font-size: 12px;
