--- a/styles/video.css
+++ b/styles/video.css
@@ -1,6 +1,7 @@
 .video-list-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(250px,1fr)); */
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 17px;
     row-gap: 19px;
     margin-left: 72px;
@@ -9,6 +10,28 @@
     border-top: 1px solid rgb(201, 201, 201);
     background-color: rgb(250, 250, 250);
 }
+@media (max-width: 580px){
+    .video-list-grid{
+        grid-template-columns: 1fr;
+    }
+}
+@media (min-width: 581px) and (max-width: 750px){
+    .video-list-grid{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media (min-width: 751px) and (max-width: 1100px){
+    .video-list-grid{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+@media (min-width: 1101px){
+    .video-list-grid{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
+
 
 .card {
     width: 100%;
