--- a/Netflix/styles/main-style.css
+++ b/Netflix/styles/main-style.css
@@ -6,26 +6,27 @@ main{
 
 .front-loader {
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0.589) 60%, rgba(0, 0, 0, 0.8) 100%),
-        url("../images/background-image.webp");
+        url("../images/background-image.jpg");
     background-size: cover;
-    height: 105vh;
+    height: 110vh;
     width: 100%;
     position: relative;
 }
 
 .content{
-    height: fit-content;
     position: absolute;
-    left: 145px;
-    right: 145px;
+    left: 157px;
+    right: 157px;
     top: 0;
+    bottom: 0;
+
 }
 
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 21px 0px;
+    padding: 22px 0px;
 }
 
 .left-logo-container{
@@ -35,7 +36,7 @@ header{
 }
 
 .left-logo-container img{
-    width: 135px;
+    width: 150px;
 }
 
 .right-container{
@@ -82,13 +83,83 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     width: 100%;
-    margin: 120px 0px;
-    color: white;
+    margin: 190px 0px;
 }
 .content-body h1{
     font-weight: 900;
-    font-size: 42px;
-    padding-inline: 12px;
+    font-size: 47px;
+    white-space: nowrap;
     text-align: center;
+}
+.front-loader-txt-1{
+    font-size: 1.5rem;
+    font-weight: 400;
+    margin-top: 18px;
+}
+.front-loader-txt-2{
+    font-size: 1.25rem;
+    font-weight: 400;
+    line-height: 20px;
+    margin-top: 30px;
+}
+
+.mail-entry-container{
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    align-items: center;
+}
+
+.email-input-box{
+    width: 330px;
+    height: 50px;
+    background-color: rgba(0, 0, 0, 0.37);
+    border: 1px solid rgba(223, 223, 223, 0.527);
+    border-radius: 5px;
+    padding-inline: 10px;
+}
+
+.email-input-box::placeholder{
+    font-size: 1rem;
+    color: rgb(228, 227, 227);
+}
+
+.mail-entry-container button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 54px;
+    width: 210px;
+    background-color: #e50914;
+    color: white;
+    margin-left: 10px;
+    font-size: 24px;
+    font-weight: 700;
+    border: none;
+    border-radius: 5px;
+}
+
+.content-centered{
+    display: flex;
+    align-items: center;
+}
+
+.subsequent-main-container{
+    height: 82vh;
+    background-color: black;
+    position: relative;
+} 
+
+.ad-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ad-box .left h1{
+    font-weight: 900;
+    font-size: 47px;
+
 }
